# hologram-archive

./: .gitignore  CLAUDE.md  LICENSE  MCP_IMPROVEMENTS.md  Makefile  README.md  REPOSITORY_STRUCTURE.md  SCHEMA_VALIDATION_COMPLETE.md
benchmarks/: Makefile  README.md  layer2-bench.c
context/: atlas_12288_intrinsics.txt  atlas_12288_memory.txt  atlas_12288_module.txt  atlas_12288_ops.txt  atlas_12288_r_96.txt  atlas_12288_simd.txt  atlas_12288_types.txt  l_2_and_l_3_completion_plan.md  llvm_implementation_plan.md  llvm_readme.md  makefile.txt  the_hologram_the_12_288_atlas_compact_comprehensive_introduction.md
docs/: HOLOGRAM_PROJECTION_MODEL.md  Makefile  README.md  index.html  l2-l3-implementation-summary.md  layer2-completeness-analysis.md  layer2-completion-report.md  layer2-contract.md  layer2-verification-report.md  layer3-contract.md
examples/: Makefile  projection_seed.c
include/: atlas.h
integration/: Makefile
layers/layer4-manifold/rs/: COMPLETION_SUMMARY.md  Cargo.toml  README.md  SECURITY_AUDIT.md  SECURITY_BEST_PRACTICES.md  UN_OPERATIONS.md  build.rs  clippy.toml  rustfmt.toml
layers/layer4-manifold/rs/src/: benchmark.rs  compression.rs  coords.rs  error.rs  ffi.rs  fourier.rs  incremental.rs  invariants.rs  lib.rs  linear.rs  manifold.rs  projection.rs  shard.rs  streaming.rs  tlv.rs  transform.rs  types.rs
layers/layer4-manifold/rs/tests/: ci_benchmarks.rs  ffi_test.rs  golden_test_cases.rs  holographic_test.rs  integration_test.rs  invariants_test.rs  layer_integration_test.rs  property_based_tests.rs  simple_property_tests.rs
llvm/: Makefile  README.md
runtime/: Makefile  README.md
spec/: hologram.4853f1a1af49b26e957ef3d1474c02f47b1265a665cbf412d5e590446c4a69e4.json  hologram.560dbfe122279d23d693136cb3007b1e0e4599a6057bfb4c9be60f3f74746c20.json  hologram.62dd6f8ae06cf0a6352784a0bb9965242fe4489df28c0fcfe42df494bb839ab9.json  hologram.7935ef5ee5313c0dfaa79b1845712b0fb7f0d0306e812858cf1f48313cc49b09.json  hologram.91d4640cc01db7f08684df9b67d05258b2434c3584b134a4fe9f1f0cbe0e9d10.json  hologram.9acabff4c0609d2d34a3b06873a5f62c74313563add21d09d3770135f33940d1.json  hologram.9beb988ed603e9c98023dc562c98942c973cc2be1629edf7cc22c73bdd45fdc2.json  hologram.a84d58682bb2039b977fc4d1c04d38bf3ac11472bba893f67f8b2287d079dbac.json  hologram.build.558b2d5b30c4657e051e0d2851065ea8e69c910ad2cde22fdd8be1a956e617e3.json  hologram.build.70e86bd1fad0ddddb5124fb2d05619b852e9e126ee6794c25450cd131effd868.json  hologram.build.8eda4c4b41c45c38ff228599f6ee6f6547e6625f44d40a75f8ea53322cd3e74c.json  hologram.build.9ad1861172744caa3d3ad2cca95643941bba3a7c495591727c821812bf8b58a7.json  hologram.build.c3d73997fc47ef0716270a99834edae3ac8423bdaa64071ed928f678a14476ab.json  hologram.build.d96ca0832080e05ccee9c5e3f0237c5424f314164978f7ae370e32414bc8dd7d.json  hologram.build.de4227ca5ced0565ea577685e3e35c239620bade07f166ea41f87c192116643c.json  hologram.build.ed1fe3bac2a43ba92d19d1dbe0bbdf712590ae9b894a95397d94a8e673a617ef.json  hologram.build.index.json  hologram.component.1863b98dee069735bbdd5bea988de7d2b24c7333bf8327f3de7249cbeb7d30bd.json  hologram.component.1bb6bb9794f2229fcabfb940b1b4e76e2ee620d4d1de61b732fbe122527647c4.json  hologram.component.2050582aade7d09a1e4b1dfa124277dfb505c9f56c5e5358971028bf264a8669.json  hologram.component.53c37f3ab6fe2e6c24e89070be951103587d6f9111ca2b5f03d0ec91e8901705.json  hologram.component.566564e6f77173fd41f0c26444625db2f6faed2fd560ad05ffb78e1648411b46.json  hologram.component.index.json  (+126 more)
(+626 files in other folders)
