[package]
name = "atlas-manifold"
version = "0.1.0"
edition = "2021"
authors = ["Atlas Hologram Team"]
description = "Layer 4: Manifold - Multi-dimensional transformation and projection layer"

[lib]
name = "atlas_manifold"
crate-type = ["cdylib", "staticlib", "rlib"]

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
panic = "abort"

[dependencies]
bytemuck = { version = "1.14", default-features = false, features = ["derive"] }

[dependencies.libc]
version = "0.2"
default-features = false

[build-dependencies]
cc = "1.0"

[features]
default = ["std"]
std = []