[package]
name = "atlas-manifold"
version = "0.1.0"
edition = "2021"
authors = ["Atlas Hologram Team"]
description = "Layer 4: Manifold - Multi-dimensional transformation and projection layer"

[lib]
name = "atlas_manifold"
crate-type = ["cdylib", "staticlib", "rlib"]

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
panic = "abort"

[dependencies]
bytemuck = { version = "1.14", default-features = false, features = ["derive"] }
fasthash = { version = "0.4", default-features = false }
rayon = { version = "1.8", optional = true }
flate2 = { version = "1.0", optional = true, default-features = false, features = ["rust_backend"] }
memmap2 = { version = "0.9", optional = true }

[dependencies.libc]
version = "0.2"
default-features = false

[dev-dependencies]
proptest = "1.4"
quickcheck = "1.0"

# No build dependencies currently needed

[features]
default = ["std"]
std = []
parallel = ["rayon", "std"]
compression = ["flate2", "std"] 
streaming = ["memmap2", "std"]
benchmarks = ["std"]

[lints.rust]
unsafe_code = "allow" # Required for FFI-safe Pod/Zeroable implementations
missing_docs = "warn"
unreachable_pub = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"

[lints.clippy]
# Correctness lints (deny level - these are bugs)
correctness = { level = "deny", priority = -1 }

# Style lints for consistency  
style = { level = "warn", priority = -1 }
doc_markdown = "warn"
manual_let_else = "warn"
redundant_closure_for_method_calls = "warn"
semicolon_if_nothing_returned = "warn"
unnested_or_patterns = "warn"

# Performance lints - critical for numerical computing
perf = { level = "warn", priority = -1 }
large_types_passed_by_value = "warn"
needless_pass_by_value = "warn"
too_many_arguments = "warn"
type_complexity = "warn"

# FFI and unsafe code lints
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_sign_loss = "warn"
fn_to_numeric_cast_any = "deny"
transmute_ptr_to_ptr = "warn"
undocumented_unsafe_blocks = "deny"

# Complexity lints
complexity = { level = "warn", priority = -1 }
cognitive_complexity = "warn"

# Suspicious patterns
suspicious = { level = "warn", priority = -1 }
lossy_float_literal = "warn"
mutex_atomic = "warn"

# Pedantic lints for high code quality
explicit_iter_loop = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
manual_ok_or = "warn"
map_unwrap_or = "warn"
match_same_arms = "warn"
needless_continue = "warn"
single_match_else = "warn"
string_add_assign = "warn"
unicode_not_nfc = "warn"
unreadable_literal = "warn"
unused_self = "warn"